--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SPIDER import train_SPIDER, Cal_knn_expression, Cal_Spatial_Net\n",
+    "from SPIDER import train_SPIDER, Cal_knn_expression, Cal_Spatial_Net, mclust_R\n",
     "import os, pickle, pandas as pd\n",
     "import scanpy as sc, numpy as np\n",
     "import  sklearn\n",
@@ -72,8 +72,7 @@
     "sc.pp.normalize_total(std,layer='SPIDER',target_sum=1e4)\n",
     "sc.pp.log1p(std,layer='SPIDER')\n",
     "std.obsm['SPIDER_pca'] = sc.tl.pca(std.layers['SPIDER'], n_comps=20, svd_solver=\"arpack\", random_state=3156)\n",
-    "import STAGATE_pyG as STAGATE\n",
-    "STAGATE.mclust_R(std, used_obsm='SPIDER_pca',num_cluster=std.uns['num_cluster'],modelNames=\"EEI\",random_seed=3156)\n",
+    "mclust_R(std, used_obsm='SPIDER_pca',num_cluster=std.uns['num_cluster'],modelNames=\"EEI\",random_seed=3156)\n",
     "sc.pl.embedding(std,basis=\"spatial\", color=[\"mclust\",\"Ground Truth\"],s=100, title=[\"SPIDER\",\"Ground Truth\"])"
    ]
   },
