--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -33,6 +33,7 @@
     "## Data includes preprocessed real ST and pseudo ST geenrated from reference scRNA-seq\n",
     "with open(\"data/DLPFC_data.pickle\", \"rb\") as f:\n",
     "    loaded = pickle.load(f)\n",
+    "# Change the code accordingly to use the CID44971 data\n",
     "std, psd = loaded[\"realST\"], loaded[\"pseudoST\"]"
    ]
   },
